# tide-predictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-11-tides-cli-implementation.md
docs/superpowers/specs/: 2026-04-11-tides-cli-design.md  2026-04-12-cache-harmonics-fes-design.md  2026-04-13-datum-coverage-design.md
src/tides/: cache.py  cli.py  datums.py  harmonics.py  models.py  noaa.py  ocean_model.py  resolver.py  stations.py  timezone.py
tests/: conftest.py  test_cache.py  test_cli.py  test_datums.py  test_harmonics.py  test_integration.py  test_models.py  test_noaa.py  test_ocean_model.py  test_resolver.py  test_stations.py  test_timezone.py
