[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tides"
version = "0.1.0"
description = "A CLI for tide predictions using NOAA station data and the GOT5.6 global tidal model"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pyTMD>=3.0",
    "scipy>=1.11",
    "numpy>=1.24",
    "h5py>=3.9",
    "httpx>=0.25",
    "timezonefinder>=6.2",
    "astral>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "pytest-httpx>=0.30",
]

[project.scripts]
tides = "tides.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests requiring network access or model data",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tides"]
